[orga] Fix dashboard z-index issue. Opacity is weird.

--- a/src/pretalx/static/common/scss/_dashboard.scss
+++ b/src/pretalx/static/common/scss/_dashboard.scss
@@ -19,8 +19,8 @@
 
   h1 {
     display: block;
-    opacity: 0.5;
     padding: 10px 0 10px;
+    color: $gray-500;
     text-align: center;
     font-size: 30px;
 
